--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "seed": "node utils/seed"
   },
   "dependencies": {
+    "dayjs": "^1.11.2",
     "express": "^4.17.1",
+    "moment": "^2.29.3",
     "mongoose": "^6.0.13"
   },
   "devDependencies": {
